--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,3 @@
-requests >= 2.32.3
-colorama >= 0.4.6
-readchar >= 4.0.5
-click
-click-plugins
-psutil
-jupyter
-packaging
-pyyaml
+jupyterlab>=4
+ipython
 pyperclip
-selenium
-webdriver-manager
-rapidfuzz
-pycryptodome
