--- a/conda-build/meta.yaml
+++ b/conda-build/meta.yaml
@@ -25,7 +25,7 @@ build:
   script: python -m pip install . -vv
   python_version_independent: true
   entry_points."franklin.plugins":
-    - franklin_add = "franklin_container.magic:load_ipython_extension"
+    - franklin = "franklin_container.magic:load_ipython_extension"
 requirements:
   host:
     - python
@@ -48,7 +48,7 @@ dependencies:   # keep this block with only these packages
 
 test:
   imports:
-    - franklin_educator
+    - franklin_container
 
 about:
   home: https://github.com/munch-group/franklin-container.git
