--- a/conda-build/meta.yaml
+++ b/conda-build/meta.yaml
@@ -31,6 +31,7 @@ requirements:
     - python
     - pip
   run:  # your library dependencies
+    - python >=3.9
     {% for dep in pyproject.get("project").get("dependencies") %}
     - {{ dep.lower() }}
     {% endfor %}  
